public/css/ambi_custom.css
/* ... */
.calender-container .calender-body .col-sm-9 .calender-view .rc-time-picker {
  margin-top: 6px;
}

.calender-container .calender-body .col-sm-9 .calender-view .calender-input .input {
  height: auto;
  color: #000000;
  font-size: 14px;
  overflow: visible;
}

.calender-body .shared-users-time-panel .panel {
  -webkit-transition: all 300ms ease;
  -moz-transition: all 300ms ease;
  -ms-transition: all 300ms ease;
  -o-transition: all 300ms ease;
  transition: all 300ms ease;
  display: none;
}

.calender-body .shared-users-time-panel .panel.active {
    display: block;
    border: none;
    width: 50%;
    border-radius: 0;
    box-shadow: none;
}

.calender-body .shared-users-time-panel .panel input {
  border: 0px;
  border-bottom: 2px solid #ddd;
  outline: none;
  padding: 6px 0px;
  border-radius: 0px;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  -o-box-shadow: none;
  box-shadow: none;
}

/* - ReactAutoSuggest Custom Styles*/
.search-holder .react-autosuggest__suggestions-container{
	z-index: 1;
}
.search-holder #react-autowhatever-1{
	max-height: 335px;
	overflow-y: scroll;
	overflow-x: hidden;
	top: 48px;
	width: 100%;
}
.search-holder #react-autowhatever-1 a:hover{
	text-decoration: none;
}
.search-holder #react-autowhatever-1 .suggestion{
	overflow: hidden;
	position: relative;
}
.search-holder #react-autowhatever-1 .suggestion .img-holder{
	width: 30px;
	height: 30px;
	margin-right: 15px;
	float: left;
}
.search-holder #react-autowhatever-1 .suggestion span{
	float: left;
	margin-top: 8px;
	line-height: 1;
	text-transform: capitalize;
	font: 12px 'montserratregular', sans-serif;
	color: #2d5164;
}

/** auto sugession list view **/
.user-label{
    color: #767676;
    font-size: 14px;
    margin-right: 10px;
}
.selected-users{
    color: #00a6ef;
    font-size: 14px;
    font-weight:normal;
    margin-right: 10px;
}
.selected-users .fa{
    margin-left: 3px;
    font-size: 11px;
}

/* calender popup close */
.model-header .model-title-inner-wrapper.week-popup{
  padding: 0 38px 0 0;
}

.model-header .calender-popup-closeBtn{
  display: block;
  width: 34px;
  height: 34px;
  background: url(../images/close-button.png) no-repeat 0 0;
  cursor: pointer;
  position: absolute;
  top: 5px;
  right: 2px;
}

/* Dashboard time */
.timeA {
	font-size: 0.17em;
	text-transform: uppercase;
	font-weight: 500;
	margin-left: 0;
}


.calender-container .calender-body .col-sm-9 .calender-view .calender-input {
  overflow: visible !important;
}

/* Day event suggestions styles. */
.day-view-text-editor-holder {
  position: relative;
}

.day-view-text-editor.day-view-editor-copy {
  /*border: 1px solid red;*/
  /*margin-bottom: -62px;*/
    position: relative;
    opacity: 1;
    z-index: 0;
}

.day-view-text-editor {
  border : 0px;
  width: 100%;
  padding: 30px 70px;
    overflow: hidden;
    font-size: 0.875em;
    font-weight: 400;
    color: #bebfbf;
    outline: none;
    position: relative;
    z-index: 1;
    opacity: 1;
}

.day-view-text-editor .custom-editor-field-suggestion {
  color: #00a6ef;
}

.day-view-text-editor-holder .suggestions-holder {
  position: absolute;
  top: 70px;
  left: 30px;
  z-index: 999;
  background: #fff;
  -webkit-box-shadow: 0 0 10px 10px #eeeeee;
  -moz-box-shadow: 0 0 10px 10px #eeeeee;
  -o-box-shadow: 0 0 10px 10px #eeeeee;
    box-shadow: 0 0 3px 2px #eeeeee;
    -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  -ms-transition: all 200ms ease;
  -o-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -o-border-radius: 3px;
  border-radius: 3px;
}

.day-view-text-editor-holder .suggestions-holder li {
  display: block;
  border-bottom: 1px solid #eee;
  padding: 10px 5px;
  overflow: hidden;
  min-width: 200px;
    line-height: 10px;
    cursor: pointer;
}

.day-view-text-editor-holder .suggestions-holder .img-div {
  font-size: 0px;
  line-height: 0px;
  width: 20px;
  margin-right: 5px;
  float: left;
}

.day-view-text-editor-holder .suggestions-holder .img-div img {
  width: 100%
}

.day-view-text-editor-holder .suggestions-holder li p {
  margin: 5px 0px 0px 0px;
}

.calender-container .calender-body .col-sm-9 .calender-view .input-menu .items-wrapper .menu-ico p button {

  -webkit-appearance: none;
  -moz-appearance: none;
  -o-appearance: none;
    border: 0px;
    background: none;
}

.calender-container .calender-body .col-sm-9 .calender-view .list-unstyled li .edit-icon {
	color: #ddd;
	font-size: 15px;
	margin-right: 10px;
	opacity: 0;
	cursor: pointer;
}

.calender-container .calender-body .col-sm-9 .calender-view .list-unstyled li:hover .edit-icon {
	opacity: 1;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area-content-list li .edit-icon {
	line-height: 41px;
	color: #dddddd;
}

.calender-container .calender-box > div.week > span.day .event-area > ul li {
	width: 11em;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

/* calender pop-over */
div.rc-time-picker-panel {
	z-index: 9999;
}
a.rc-time-picker-panel-clear-btn {
	display: none;
}

.week-view-editor-popup-holder .model-body{
	/*overflow: visible;*/
    min-height: 165px;
}

#calendar-popover-typo {
	z-index: 9999;
}

#calendar-popover-typo .menu-ico {
  display: inline-block;
}

#calendar-popover-typo .menu-ico p {
  margin: 0px;
}

#calendar-popover-typo .menu-ico span {
  cursor: pointer;
  padding: 5px 10px;
  display: inline-block;
}

#calendar-popover-typo .menu-ico span.italic {
  font-style: italic;
}

#calendar-popover-typo .menu-ico span.bold {
  font-weight: bold;
}

#calendar-popover-typo .menu-ico span.underline {
  text-decoration: underline;
}

#calendar-popover-typo .menu-ico span:hover {
  background: #E3F2FF;
}

.popup-holder.week-view-editor-popup-holder {
		overflow: visible;
}
/* ... */

